Fix clock missalignment on Event page

--- a/theme.css
+++ b/theme.css
@@ -105,10 +105,8 @@ div.ui-popup,
     border-color: #11213d!important;
 }
 
+
 /*  navigation  */
-
-body.dashboard .beforebannav{padding: 0 10px}
-
 
 #dashcontent h2, 
 #settingscontent h1{
